<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gary_bg">

    <include
        android:id="@+id/setting_title"
        layout="@layout/comm_title_layout" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/always_url_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/always_url_text" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>
    <View
        style="@style/horizontalLine"
        android:layout_marginLeft="@dimen/dimen_20" />

    <RelativeLayout
        android:id="@+id/remove_cache_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/remove_cache" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>
    <View
        style="@style/horizontalLine"
        android:layout_marginLeft="@dimen/dimen_20" />

    <RelativeLayout
        android:id="@+id/about_us_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/about_us" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>
</LinearLayout>

    <TextView
        android:id="@+id/exit_login"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:background="@drawable/auth_submit_shape"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        android:text="@string/exit_login"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


</LinearLayout>