<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gary_bg"
    android:orientation="vertical">

    <com.qianying.bbdc.widget.CustomTitlebar
        android:layout_width="match_parent"
        android:id="@+id/titlebar"
        android:layout_height="44dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_promotion"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            android:gravity="center"
            android:hint="@string/favourable_code"
            android:inputType="text"
            android:textColor="@color/text"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/txt_pay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:text="@string/favour_ime"
            android:focusable="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:textSize="14dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:src="@mipmap/promotion"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_promotion"
            android:textColor="@color/text"
            android:textSize="14dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
