<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="完成实名认证即可立即开始用车"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white">

        <com.qianying.bike.widget.StatusViewCopy
            android:id="@+id/status_tel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.qianying.bike.widget.StatusViewCopy
            android:id="@+id/status_deposit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.qianying.bike.widget.StatusViewCopy
            android:id="@+id/status_certification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.qianying.bike.widget.StatusViewCopy
            android:id="@+id/status_complete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gary_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/mine_ballet_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/mine_wallet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_mine_wallet"
                android:gravity="center_vertical"
                android:text="0.00元" />

            <ImageView
                android:id="@+id/arrow_mine_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />


        </RelativeLayout>

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="@dimen/dimen_20" />

        <RelativeLayout
            android:id="@+id/mine_favourable_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/mine_favourable" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_mine_favourable"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/arrow_mine_favourable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="@dimen/dimen_20" />

        <RelativeLayout
            android:id="@+id/mine_travel_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/mine_travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_mine_travel"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/arrow_mine_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            android:layout_height="10dp"
            android:background="@color/gary_bg"
            android:layout_width="match_parent"/>

        <RelativeLayout
            android:id="@+id/mine_message_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/mine_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_mine_message"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/arrow_mine_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="@dimen/dimen_20"/>

        <RelativeLayout
            android:id="@+id/invite_friends_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/invite_friends" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_mine_friends"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/arrow_mine_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="@dimen/dimen_20"/>

        <RelativeLayout
            android:id="@+id/user_book_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/user_book" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_mine_book"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/arrow_mine_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="@dimen/dimen_20" />

        <RelativeLayout
            android:id="@+id/setting_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/setting_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/arrow_mine_setting"
                android:gravity="center_vertical"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/arrow_mine_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="20dp" />
</LinearLayout>